handle negative positioning on small screen

--- a/demos/tooltips.html
+++ b/demos/tooltips.html
@@ -56,7 +56,7 @@
 
         <p>A <span data-tooltip="" title="Always visible" data-tooltip-visible="true">tooltip that is always visible</span> thanks to <code>data-tooltip-visible="true"</code>.</p>
 
-        <p> <span data-tooltip="visible: true" title="I'm a long tooltip with an arrow well placed">Nostrud</span> deserunt culpa aliqua mollit sit ex mollit irure incididunt non anim. <span data-tooltip="visible: true" title="I'm a long tooltip with an arrow well placed">Anim</span> aliquip ullamco
+        <p> <span data-tooltip="visible: true" title="I'm a long tooltip with an arrow well placed">Nostrud</span> deserunt culpa aliqua mollit sit ex mollit irure incididunt non anim. <span data-tooltip="visible: true" title="I'm a long tooltip with an arrow well placed always visible">Anim</span> aliquip ullamco
             dolor anim Lorem
             deserunt <a href="#" data-tooltip title="Some tooltip">i have a tooltip</a> consectetur consectetur aliquip voluptate. Esse
             incididunt adipisicing irure ipsum enim quis fugiat animated <a href="#" data-tooltip="bottom"
