--- a/demos/tooltips.html
+++ b/demos/tooltips.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>modern-now</title>
+    <script>window.DEBUG = true</script>
     <script type="module" src="../dist/full.js"></script>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3/dist/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
@@ -26,6 +27,9 @@
                 btn.remove();
             }
         });
+
+        // you can actually pass an array to querySelectorAll since it's a DOMString which will be converted to a string
+        // console.log(document.querySelectorAll(['a', 'h2']))
     </script>
 </head>
 
