--- a/demos/notes.html
+++ b/demos/notes.html
@@ -23,7 +23,7 @@
 
         <h3 id="simple-config">Simple config</h3>
 
-        <p>While it's possible to store every config attribute in one (ore many!) "data" attribute, it's not always practical for many
+        <p>While it's possible to store every config attribute in one (or many!) "data" attribute, it's not always practical for many
             reasons. All values
             end up being strings, it's a bit verbose
             and it's not exactly easy to set functions.
