--- a/demos/dropdowns.html
+++ b/demos/dropdowns.html
@@ -156,6 +156,29 @@
             scale: 1.1;
             opacity: 0;
         }
+
+        /* drawer */
+
+        @media (max-width: 767.98px) {
+            .dropdown-menu.mobile-drawer {
+                position: fixed;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                border-top-left-radius: var(--bs-border-radius);
+                border-top-right-radius: var(--bs-border-radius);
+                border-bottom-left-radius: 0;
+                border-bottom-right-radius: 0;
+            }
+        }
+
+        /* :dir hack */
+        :dir(rtl) {
+            --dir: 'rtl';
+        }
+        :dir(ltr) {
+            --dir: 'ltr';
+        }
     </style>
 
 </head>
@@ -192,12 +215,22 @@
             <li><a href="#" class="dropdown-item">Bonbons</a></li>
         </ul>
 
-        <p>Adjust placement with <code>data-dropdown-placement</code>.</p>
+        <p>Adjust placement with <code>data-dropdown-placement</code> and <code>data-dropdown-distance</code>.</p>
 
         <button type="button" data-dropdown="sweets-dropdown2" data-dropdown-placement="bottom">
             Centered dropdown menu button
         </button>
         <ul id="sweets-dropdown2" class="dropdown-menu" hidden>
+            <li><a href="#" class="dropdown-item">Donuts</a></li>
+            <li><a href="#" class="dropdown-item">Cupcakes</a></li>
+            <li><a href="#" class="dropdown-item">Chocolate</a></li>
+            <li><a href="#" class="dropdown-item">Bonbons</a></li>
+        </ul>
+
+        <button type="button" data-dropdown="sweets-dropdown-no-distance" data-dropdown-placement="bottom" data-dropdown-distance="0">
+            No distance
+        </button>
+        <ul id="sweets-dropdown-no-distance" class="dropdown-menu" hidden>
             <li><a href="#" class="dropdown-item">Donuts</a></li>
             <li><a href="#" class="dropdown-item">Cupcakes</a></li>
             <li><a href="#" class="dropdown-item">Chocolate</a></li>
@@ -226,6 +259,29 @@
             <li><a href="#" class="dropdown-item">Chocolate</a></li>
             <li><a href="#" class="dropdown-item">Bonbons</a></li>
         </ul>
+
+        <p>Advanced dropdown content in RTL container</p>
+
+        <div dir="rtl">
+            <button type="button" data-dropdown="drop-filters">Dropdown with a form and a mobile version</button>
+            <div id="drop-filters" class="dropdown-menu mobile-drawer" hidden style="display:flex">
+                <form action="" class="px-2">
+                    <label>
+                        <input type="checkbox"> Pick me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+
+                    <div class="d-flex justify-content-between mt-2" style="gap:1rem">
+                        <button type="reset" class="btn btn-secondary">Clear</button><button type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
 
         <p>Closing modes : choose between manual (you have to press esc or click the button again), inside (clicking inside closes the menu)
             , outside (clicking outside closes the menu), .selector</p>
