implement dropdown drawer

--- a/demos/dialog.html
+++ b/demos/dialog.html
@@ -387,6 +387,10 @@
             I'm a offcanvas menu with scrolling disabled
             <button data-dialog-close>Close</button>
         </dialog>
+
+        <h3>Responsive modal</h3>
+
+        <p>Credits to <a href="https://github.com/redpangilinan/credenza" target="_blank">Credenza</a>.</p>
     </main>
 
     <footer>
