add scroll demo

--- a/demos/dropdowns.html
+++ b/demos/dropdowns.html
@@ -206,8 +206,10 @@
                 bottom: 0;
                 left: 0;
                 right: 0;
+                top: auto;
                 z-index: 9999;
-                /* needs a base anim*/
+                max-height: 80vh;
+                overflow-y: auto;
             }
 
             /* START ANIM */
@@ -341,7 +343,7 @@
             <button type="button" data-dropdown="drop-filters" data-dropdown-drawer="true">Dropdown with a form and a drawer for mobile
                 version</button>
             <div id="drop-filters" class="dropdown-menu mobile-drawer" hidden style="display:flex">
-                <button class="mobile-drawer-close" data-dropdown-close><svg xmlns="http://www.w3.org/2000/svg" width="800" height="800"
+                <button class="mobile-drawer-close" data-dropdown-close><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                         viewBox="0 0 24 24">
                         <path fill="none" d="M0 0h24v24H0z" />
                         <path
@@ -353,6 +355,95 @@
                     </label>
                     <label>
                         <input type="checkbox"> Or me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+
+                    <div class="d-flex justify-content-between mt-2" style="gap:1rem">
+                        <button type="reset" class="btn btn-secondary">Clear</button><button type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
+
+            <button type="button" data-dropdown="drop-filters-long" data-dropdown-drawer="true">Dropdown with a super long list of options
+                version</button>
+            <div id="drop-filters-long" class="dropdown-menu mobile-drawer" hidden style="display:flex">
+                <button class="mobile-drawer-close" data-dropdown-close><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
+                        viewBox="0 0 24 24">
+                        <path fill="none" d="M0 0h24v24H0z" />
+                        <path
+                            d="M18.36 19.78 12 13.41l-6.36 6.37-1.42-1.42L10.59 12 4.22 5.64l1.42-1.42L12 10.59l6.36-6.36 1.41 1.41L13.41 12l6.36 6.36z" />
+                    </svg></button>
+                <form action="" class="p-3">
+                    <label>
+                        <input type="checkbox"> Pick me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
+                    </label>
+                    <label>
+                        <input type="checkbox"> Or just me
                     </label>
                     <label>
                         <input type="checkbox"> Or just me
